--- a/public/resume/style/style.scss
+++ b/public/resume/style/style.scss
@@ -13,7 +13,7 @@
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     color: #222;
-    font-size: 10px;
+    font-size: 14px;
     line-height: 26px;
     padding-bottom: 50px;
   }
@@ -99,12 +99,12 @@
     }
     
     .left {
-      width: 60%;    
+      width: 50%;    
     }
     
     .right {
       text-align: left;
-      width: 39%;    
+      width: 49%;    
     }
   }
   
@@ -112,7 +112,8 @@
     line-height: 20px;
 
     .section {
-      margin-bottom: 40px;  
+      margin-bottom: 40px; 
+      font-size: 14px; 
     }
     
     .section:last-of-type {
@@ -157,7 +158,13 @@
     
     .name {
       font-weight: bold;
-      font-size: 20px;
+      font-size: 18px;
+      margin-bottom: 10px;
+      .degree {
+        font-weight: lighter;
+        color: #999;
+        font-size: 16px;
+      }
     }
 
     .subname {
@@ -177,12 +184,12 @@
     
     .skills {
       .left {
-        width: 20%;    
+        width: 50%;    
       }
       
       .right {
         text-align: left;
-        width: 79%;    
+        width: 49%;    
       }
     }
       
@@ -197,8 +204,8 @@
       
       label {
         display: inline-block;  
-        width: 12px;
-        height: 12px;
+        width: 10px;
+        height: 10px;
         background: #C3DEF3;
         border-radius: 20px;
         margin-right: 3px;
