--- a/resume/style/style.css
+++ b/resume/style/style.css
@@ -91,11 +91,11 @@ a {
   display: inline-block;
 }
 .header .left {
-  width: 60%;
+  width: 50%;
 }
 .header .right {
   text-align: left;
-  width: 39%;
+  width: 49%;
 }
 
 .details {
@@ -103,6 +103,7 @@ a {
 }
 .details .section {
   margin-bottom: 40px;
+  font-size: 14px;
 }
 .details .section:last-of-type {
   margin-bottom: 0px;
@@ -139,7 +140,13 @@ a {
 }
 .details .name {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.details .name .degree {
+  font-weight: lighter;
+  color: #999;
+  font-size: 16px;
 }
 .details .subname {
   font-weight: bold;
@@ -154,11 +161,11 @@ a {
   color: #000;
 }
 .details .skills .left {
-  width: 20%;
+  width: 50%;
 }
 .details .skills .right {
   text-align: left;
-  width: 79%;
+  width: 49%;
 }
 .details .skills__item {
   margin-bottom: 10px;
@@ -168,8 +175,8 @@ a {
 }
 .details .skills__item .right label {
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   background: #C3DEF3;
   border-radius: 20px;
   margin-right: 3px;
