--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -5,4 +5,7 @@
 {{ if or .Params.math .Site.Params.math }}
 {{ partial "math.html" . }}
 {{ end }}
+<!-- {{ if .Params.ShowToc }}
+{{ partial "toc.html" . }}
+{{ end }} -->
 {{- /* Head custom content area end */ -}}
