add yaml config

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -5,4 +5,9 @@
 {{ if or .Params.math .Site.Params.math }}
 {{ partial "math.html" . }}
 {{ end }}
+{{ if (.Params.mermaid) }}
+<!-- MermaidJS support -->
+<script async src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+
+{{ end }}
 {{- /* Head custom content area end */ -}}
