--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -8,6 +8,14 @@
 {{ if (.Params.mermaid) }}
 <!-- MermaidJS support -->
 <script async src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-
 {{ end }}
+<script src="https://utteranc.es/client.js"
+    repo="intervalrain.github.io"
+    issue-term="pathname"
+    label="Comment"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
+</script>
+
 {{- /* Head custom content area end */ -}}
